tests/ui/privacy/private-struct-field.stderr
error[E0616]: field `meows` of struct `Cat` is private
  --> $DIR/private-struct-field.rs:13:21
   |
LL |     assert_eq!(nyan.meows, 52);
   |                     ^^^^^ private field

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0616`.
